# Polars_Serialization

./: .gitignore  pyproject.toml
polars_serialization/: Generate_Data.py  Serialization.py
